# aspire

./: .editorconfig  .gitattributes  .gitignore  .markdownlintignore  .mcp.json  AGENTS.md  Aspire-Core.slnf  Aspire.slnx  Directory.Build.props  Directory.Packages.props  NuGet.config  README.md  THIRD-PARTY-NOTICES.TXT  es-metadata.yml  flake.nix  global.json  localhive.ps1  localhive.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: 10_bug_report.yml  20_feature-request.yml  (+1 more)
.squad/: decisions.md
benchmarks/: Directory.Build.props
docs/: area-owners.md  azure.md  cli-staging-validation.md  contributing.md  dogfooding-pull-requests.md  extension-signing.md  getting-perf-traces.md  list-of-diagnostics.md  release-process.md
eng/: AfterSigning.targets  AfterSolutionBuild.targets  Build.props  Bundle.proj  Publishing.props  Signing.props  SpecializedTestRunsheetBuilderBase.targets  Testing.props  Testing.targets  Version.Details.xml  Versions.props  aspire-managed-entitlements.plist  build.ps1  build.sh  refreshTypeScriptSdks.ps1  test-retry-patterns.json
extension/: .mocharc.e2e.js  .npmrc  .vscode-test.mjs  .vscodeignore  .yarnrc  CHANGELOG.md  CONTRIBUTING.MD  CONTRIBUTING.md  Extension.proj  README.md  build.ps1  build.sh  eslint.config.mjs  gulpfile.js  package-lock.json  package.json  package.nls.json  telemetry.json  tsconfig.e2e.json  webpack.config.js
playground/FoundryHostedAgents/app/: main.py  pyproject.toml
src/: Directory.Build.props  Directory.Build.targets
tests/: .editorconfig  Directory.Packages.props  README.md
(+5783 files in other folders)
